v1.9.6 (2023-07-16)
 * Bugfix: when a note was immediately cancelled after being triggered, it
   could happen that parameters would start their envelope release stage from
   the parameter's last set value instead of the envelope's initial value; now
   if and envelope is released immediately then it will gradually change from
   its initial value to its final value

v1.9.5 (2023-07-15)
 * 2 new presets: Nightmare Lead and Tremolo Lead
 * Bugfix: along with the release time, non-dynamic envelopes will also use the
   final value and amount that was in effect at the moment when the note was
   triggered, and only dynamic envelopes will update their final value and
   amount for already sounding notes

v1.9.4 (2023-07-14)
 * Bugfix: when the same note was triggered on multiple voices while holding
   down the sustain pedal, then releasing the pedal failed to release some
   of the voices, keeping the note ringing. Now these stuck notes are correctly
   released

v1.9.3 (2023-07-11)
 * Documentation clarifications and typo fixes
 * Improve VST 3 bundle compatibility with 32 bit hosts on Linux
 * Bugfix: reduce unwanted noise in the Overdrive and Distortion effects which
   became noticeable when the input signal was already rich in harmonics, and
   the distortion was cranked up to 11

v1.9.2 (2023-07-08)
 * Include more detailed, HTML documentation in distribution packages
 * Increase the effect of note velocity on the timbre of the Saw Piano and
   Saw Piano Reversed patches
 * Reduce CPU usage while collecting decayed voices
 * Bugfix: when the sustain pedal was released, occasionally a few notes would
   remain sounding, and sometimes notes could get released which should have
   remained sounding due to their corresponding key being held down. Now those
   and only those voices remain sounding after a pedal release which belong to
   held down keys

v1.9.1 (2023-07-05)
 * Voices which decay completely into silence during their envelope sustain